# Pyrlik_Ivan_CW_4

./: .env_example  README.md  config.py  main.py  pyproject.toml
data/: vacancies.json
src/: api.py  engine.py  utils.py  vacancy.py
