[tool.poetry]
name = "poetry new package-name"
version = "0.1.0"
description = ""
authors = ["IvanPyrlik <ivan.pyrlik59@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
